--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 20px 0 0 0;
+  padding: 0 0 0 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,7 +14,11 @@ code {
 }
 
 /* Custom Styles */
+.navbar {
+  margin-bottom: 30px;
+}
 
 .clickable {
   cursor: pointer;
 }
+
